Add second DataBase